editor_files = files(
  'AdjustBrightness.vala',
  'AdjustColors.vala',
  'AdjustContrast.vala',
  'AdjustSaturation.vala',
  'AspectRatioGroup.vala',
  'ColorPicker.vala',
  'ColorPreview.vala',
  'Crop.vala',
  'CurveOperation.vala',
  'EditorPalette.vala',
  'EditorSidebar.vala',
  'FilterGrid.vala',
  'Grayscale.vala',
  'GridGroup.vala',
  'ImageSelector.vala',
  'ImageTool.vala',
  'Points.vala',
  'ResizeImage.vala',
  'SharpenImage.vala',
  'SpecialEffects.vala',
  'ToolButton.vala',
)
