subdir('SpecialEffects')

editor_files = special_effects_files + files(
  'AdjustBrightness.vala',
  'AdjustColors.vala',
  'AdjustContrast.vala',
  'AdjustSaturation.vala',
  'AspectRatioGroup.vala',
  'ColorPicker.vala',
  'ColorPreview.vala',
  'ColorRangeType.vala',
  'ColorRange.vala',
  'ColorSelector.vala',
  'Color.vala',
  'Crop.vala',
  'CurveOperation.vala',
  'EditorPalette.vala',
  'EditorSidebar.vala',
  'FilterGrid.vala',
  'Grayscale.vala',
  'GridGroup.vala',
  'ImageAlignment.vala',
  'ImageRotator.vala',
  'ImageSelector.vala',
  'ImageTool.vala',
  'ResizeImage.vala',
  'RotateImage.vala',
  'SharpenImage.vala',
  'SpecialEffects.vala',
  'ToolButton.vala',
)
