filters_files = files(
 'AddRuleDialog.vala',
 'Filter.vala',
 'FilterBar.vala',
 'FilterEditorPage.vala',
 'FilterFile.vala',
 'FilterRow.vala',
 'FiltersDialog.vala',
 'Test.vala',
 'TestAspectRatio.vala',
 'TestDate.vala',
 'TestExpr.vala',
 'TestExprEditorGroup.vala',
 'TestInt.vala',
 'TestSelector.vala',
 'TestSize.vala',
 'TestString.vala',
)
