filters_files = files(
 'AddRuleDialog.vala',
 'FilterBar.vala',
 'FilterEditorPage.vala',
 'FilterRow.vala',
 'FiltersDialog.vala',
 'Filters.vala',
 'Filter.vala',
 'TestAspectRatio.vala',
 'TestDate.vala',
 'TestExprEditorGroup.vala',
 'TestExpr.vala',
 'TestInt.vala',
 'TestSelector.vala',
 'TestSize.vala',
 'TestString.vala',
 'Test.vala',
)
