glade_images =				\
	ftp-client-48.png		\
	gphoto-48.png			\
	volume-mute.png

glade_DATA = 				\
	$(glade_images)			\
	gthumb.glade 			\
	gthumb_camera.glade		\
	gthumb_comments.glade		\
	gthumb_convert.glade		\
	gthumb_crop.glade		\
	gthumb_edit.glade		\
	gthumb_png_exporter.glade 	\
	gthumb_preferences.glade	\
	gthumb_print.glade		\
	gthumb_redeye.glade		\
	gthumb_search.glade		\
	gthumb_tools.glade		\
	gthumb_web_exporter.glade 
gladedir = $(datadir)/gthumb/glade

EXTRA_DIST = $(glade_DATA)

-include $(top_srcdir)/git.mk
