ui_files = files(
  'browser-preferences.ui',
  'extensions-preferences.ui',
  'favorite-properties.ui',
  'filter-editor.ui',
  'histogram-info.ui',
  'location.ui',
  'overwrite-dialog.ui',
  'personalize-filters.ui',
  'preferences.ui',
  'shortcuts-preferences.ui',
  'sort-order.ui'
)
install_data(ui_files, install_dir : ui_install_dir)
